input suffix, fix alignment, actions, add progress bar themes

--- a/internal/ui/login/static/resources/themes/scss/styles/input/input.scss
+++ b/internal/ui/login/static/resources/themes/scss/styles/input/input.scss
@@ -9,4 +9,15 @@ input:not([type=radio]):not([type=checkbox]),
 select, .lgn-select {
     @include lgn-input-base;
 }
-  
+
+.lgn-suffix-wrapper {
+    position: relative;
+
+    [lgnSuffix] {
+        position: absolute;
+        right: .5rem;
+        top: 9px;
+        height: inherit;
+        vertical-align: middle;
+    }
+}
