--- a/internal/ui/login/static/resources/themes/zitadel/css/bundle.css
+++ b/internal/ui/login/static/resources/themes/zitadel/css/bundle.css
@@ -168,6 +168,17 @@ select::placeholder, .lgn-select::placeholder {
   font-style: italic;
 }
 
+.lgn-suffix-wrapper {
+  position: relative;
+}
+.lgn-suffix-wrapper [lgnSuffix] {
+  position: absolute;
+  right: 0.5rem;
+  top: 9px;
+  height: inherit;
+  vertical-align: middle;
+}
+
 .lgn-label {
   display: block;
   font-size: 12px;
@@ -354,6 +365,7 @@ a.block {
   display: flex;
   align-items: center;
   padding: 0.5rem 0;
+  margin-top: 1rem;
 }
 .content-container .lgn-actions.lgn-reverse-order {
   flex-direction: row-reverse;
@@ -994,6 +1006,17 @@ select::placeholder, .lgn-select::placeholder {
   font-style: italic;
 }
 
+.lgn-suffix-wrapper {
+  position: relative;
+}
+.lgn-suffix-wrapper [lgnSuffix] {
+  position: absolute;
+  right: 0.5rem;
+  top: 9px;
+  height: inherit;
+  vertical-align: middle;
+}
+
 .lgn-label {
   display: block;
   font-size: 12px;
@@ -1180,6 +1203,7 @@ a.block {
   display: flex;
   align-items: center;
   padding: 0.5rem 0;
+  margin-top: 1rem;
 }
 .content-container .lgn-actions.lgn-reverse-order {
   flex-direction: row-reverse;
@@ -1950,6 +1974,7 @@ i {
   display: flex;
   align-items: center;
   padding: 0.5rem 0;
+  margin-top: 1rem;
 }
 .content-container .lgn-actions.lgn-reverse-order {
   flex-direction: row-reverse;
